# rust-movie-db

./: Cargo.toml  Shuttle.toml  justfile
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: health.rs  lib.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
